objects/PC_Document_Log__c.object
<CustomObject>
    <description>Patient Connect custom object:  used to link the custom Document object records to various objects</description>
    <fields>
        <fullName>ACLS_Document_Status__c</fullName>
        <description>Status of the related document</description>
        <formula>TEXT(PC_Document__r.PC_Document_Status__c)</formula>
        <label>Document Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Prescription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prescription</label>
        <referenceTo>PC_Prescription__c</referenceTo>
        <relationshipLabel>Document Logs</relationshipLabel>
        <relationshipName>Document_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account associated with the document.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Document Logs</relationshipLabel>
        <relationshipName>Document_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Activity_Id__c</fullName>
        <description>Id of the activity record which is associated with the document log record.</description>
        <label>Activity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Activity_Name__c</fullName>
        <description>Name of the activity record which is associated with the document log record.</description>
        <label>Activity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Activity__c</fullName>
        <description>Psuedo lookup to the activity record which is associated with the document log record.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;  PC_Activity_Id__c ,  PC_Activity_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Adverse_Event2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to adverse event that is created from the respective document.</description>
        <label>Adverse Event 2</label>
        <referenceTo>PC_AdverseEvent2__c</referenceTo>
        <relationshipLabel>Document Logs</relationshipLabel>
        <relationshipName>Document_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Adverse_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to adverse event that is created from the respective document.</description>
        <label>Adverse Event</label>
        <referenceTo>PC_AdverseEvent__c</referenceTo>
        <relationshipLabel>Document Logs</relationshipLabel>
        <relationshipName>Document_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Association_Record_Formula__c</fullName>
        <description>Displays the type of association and the record ID it is associated with.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; PC_Association_Record_Id__c,  PC_Association_Record_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Association Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Association_Record_Id__c</fullName>
        <description>The record ID for the corresponding association.</description>
        <label>Association Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Association_Record_Name__c</fullName>
        <label>Association Record Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Association_Type__c</fullName>
        <description>The type of association (for example, Program, Health Plan, and Coverage).</description>
        <label>Association Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Attachment_Link__c</fullName>
        <description>Link to view the attached document.</description>
        <formula>IF( LEFT(PC_Document__r.PC_Attachment_Id__c, 3) = &quot;00P&quot; ,HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;+ PC_Document__r.PC_Attachment_Id__c , &quot;View Attachment&quot;), HYPERLINK(&quot;/&quot;+ PC_Document__r.PC_Attachment_Id__c , &quot;View Attachment&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attachment Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Categorization__c</fullName>
        <description>Displays the category of the document record</description>
        <label>Categorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Coverage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program coverage associated with a document.</description>
        <label>Coverage</label>
        <referenceTo>PC_Program_Coverage__c</referenceTo>
        <relationshipLabel>Document Logs</relationshipLabel>
        <relationshipName>Document_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Document_Category__c</fullName>
        <description>Document sent or received can be categorized as Enrollment Form, Payer Forms, Coverage Denial Documentation, Adverse Event, and Product Complaint.</description>
        <label>Document Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Welcome Gesture</fullName>
                </value>
                <value>
                    <fullName>Copay Card</fullName>
                </value>
                <value>
                    <fullName>Copay Program Cover Letter</fullName>
                </value>
                <value>
                    <fullName>Enrollment Form</fullName>
                </value>
                <value>
                    <fullName>Payer Forms</fullName>
                </value>
                <value>
                    <fullName>Coverage Denial Documentation</fullName>
                </value>
                <value>
                    <fullName>Adverse Event</fullName>
                </value>
                <value>
                    <fullName>Product Complaint</fullName>
                </value>
                <value>
                    <fullName>Adverse Event and Product Complaint</fullName>
                </value>
                <value>
                    <fullName>Program Feedback</fullName>
                </value>
                <value>
                    <fullName>Patient Authorization</fullName>
                </value>
                <value>
                    <fullName>Patient Consent</fullName>
                </value>
                <value>
                    <fullName>Patient Opt Out</fullName>
                </value>
                <value>
                    <fullName>Patient HIPAA Revocation</fullName>
                </value>
                <value>
                    <fullName>Verbal Authorization Transcript Representation</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Enrollment Follow Up</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Illegible</fullName>
                </value>
                <value>
                    <fullName>Injection Training</fullName>
                </value>
                <value>
                    <fullName>Patient Un-enrollment</fullName>
                </value>
                <value>
                    <fullName>AE/PC</fullName>
                </value>
                <value>
                    <fullName>Medical Notes</fullName>
                </value>
                <value>
                    <fullName>Prescription</fullName>
                </value>
                <value>
                    <fullName>Insurance Information</fullName>
                </value>
                <value>
                    <fullName>Physician Authorization</fullName>
                </value>
                <value>
                    <fullName>Lab Results</fullName>
                </value>
                <value>
                    <fullName>Post Injection Training Report</fullName>
                </value>
                <value>
                    <fullName>SA Documentation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Document_Log__c</fullName>
        <description>A description about the log information modification.</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Document_Owner_Id__c</fullName>
        <description>The user Id of the owner of the document.</description>
        <label>Document Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Document_Type__c</fullName>
        <description>Type of the document uploaded.</description>
        <formula>PC_Document__r.RecordType.Name</formula>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Document__c</fullName>
        <description>Look up to Document that is created.</description>
        <label>Document</label>
        <referenceTo>PC_Document__c</referenceTo>
        <relationshipLabel>Document Logs</relationshipLabel>
        <relationshipName>Document_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PC_Health_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The health plan record associated with the document.</description>
        <label>Health Plan</label>
        <referenceTo>PC_Health_Plan__c</referenceTo>
        <relationshipLabel>Document Logs</relationshipLabel>
        <relationshipName>Document_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The interaction record associated with the document.</description>
        <label>Interaction</label>
        <referenceTo>PC_Interaction__c</referenceTo>
        <relationshipLabel>Document Logs</relationshipLabel>
        <relationshipName>Document_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Legacy_System_Document_ID__c</fullName>
        <description>for data loader.</description>
        <label>Legacy System Document ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Legacy_System_Document_Log_ID__c</fullName>
        <description>for data loader</description>
        <externalId>true</externalId>
        <label>Legacy System Document Log ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PC_Legacy_System_Patient_ID__c</fullName>
        <description>for data loader</description>
        <label>Legacy System Patient ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Legacy_System_Program_ID__c</fullName>
        <description>for data loader</description>
        <label>Legacy System Program ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Legacy_System_Source__c</fullName>
        <description>for data loader</description>
        <label>Legacy System Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Prior_Parent_Id_GLBL__c</fullName>
        <label>Prior Parent Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The patient program case associated with the document.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Document Logs</relationshipLabel>
        <relationshipName>Document_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Document Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Document Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>